--- a/Views/Categories/Index.cshtml
+++ b/Views/Categories/Index.cshtml
@@ -67,7 +67,10 @@
 
 @*                  <a asp-action="Details" asp-route-id="@item.CategoryId">Details</a> |
  *@
-                                        <a asp-action="Delete" class="btn  btn-square btn-danger" asp-route-id="@item.CategoryId"><i class="fa fa-trash-o "></i></a>
+                                        <form asp-action="Delete" method="post" class="deleteForm">
+                                            <input type="hidden" name="id" value="@item.CategoryId" asp-for="@item.CategoryId" />
+                                            <button type="submit" class="btn btn-danger btn-sm m-2"><i class="fa fa-trash"></i></button>
+                                        </form>
                                     </td>
 
             
