--- a/Views/ItemSizes/Index.cshtml
+++ b/Views/ItemSizes/Index.cshtml
@@ -59,8 +59,10 @@
             </td>
             <td style="display:flex;margin-left: 30px !important ">
                 <a asp-action="Edit" class="btn btn-square btn-primary" asp-route-id="@item.SizeId"><i class="fa fa-edit"></i></a> 
-                <a asp-action="Delete" class="btn btn-square btn-danger" asp-route-id="@item.SizeId"><i class="fa fa-trash-o"></i></a>
-            </td>
+           <form asp-action="Delete" method="post" class="deleteForm">
+                                            <input type="hidden" name="id" value="@item.SizeId" asp-for="@item.SizeId" />
+                                            <button type="submit" class="btn btn-danger btn-sm m-2"><i class="fa fa-trash"></i></button>
+                                        </form> </td>
         </tr>
 }
     </tbody>
