--- a/Views/Items/Index.cshtml
+++ b/Views/Items/Index.cshtml
@@ -110,8 +110,10 @@
             <td style="display:flex;margin-left:30px !important">
                 <a asp-action="Edit" class="btn btn-square btn-primary" asp-route-id="@item.ItemId"><i class="fa fa-edit"></i></a> 
 
-                <a asp-action="Delete" class="btn btn-square btn-danger" asp-route-id="@item.ItemId"><i class="fa fa-trash-o"></i></a>
-            </td>
+            <form asp-action="Delete" method="post" class="deleteForm">
+                                            <input type="hidden" name="id" value="@item.ItemId" asp-for="@item.ItemId" />
+                                            <button type="submit" class="btn btn-danger btn-sm m-2"><i class="fa fa-trash"></i></button>
+                                        </form></td>
         </tr>
 }
     </tbody>
