--- a/Views/Roles/Index.cshtml
+++ b/Views/Roles/Index.cshtml
@@ -52,8 +52,10 @@
                                             <button type="submit" class="btn btn-danger btn-sm m-2"><i class="fa fa-trash"></i></button>
                                         </form *@
 
-                                        <a asp-action="Delete" class="btn btn-square btn-danger" asp-route-id="@item.RollId"><i class="fa fa-trash-o"></i></a>
-                                    </td>
+                                    <form asp-action="Delete" method="post" class="deleteForm">
+                                            <input type="hidden" name="id" value="@item.RollId" asp-for="@item.RollId" />
+                                            <button type="submit" class="btn btn-danger btn-sm m-2"><i class="fa fa-trash"></i></button>
+                                        </form> </td>
                                 </tr>
                             }
                         </tbody>
