--- a/Views/VoucherCodes/Index.cshtml
+++ b/Views/VoucherCodes/Index.cshtml
@@ -74,8 +74,10 @@
             <td style="display:flex;margin-inline:0px !important">
                 <a asp-action="Edit"  class="btn btn-square btn-primary" asp-route-id="@item.VoucherId"><i class="fa fa-edit"></i></a> 
                 
-                <a asp-action="Delete" class="btn btn-square btn-danger" asp-route-id="@item.VoucherId"><i class="fa fa-trash-o"></i></a>
-            </td>
+<form asp-action="Delete" method="post" class="deleteForm">
+                                            <input type="hidden" name="id" value="@item.VoucherId" asp-for="@item.VoucherId" />
+                                            <button type="submit" class="btn btn-danger btn-sm m-2"><i class="fa fa-trash"></i></button>
+                                        </form>          </td>
         </tr>
 }
     </tbody>
