--- a/Views/Authentication/Login.cshtml
+++ b/Views/Authentication/Login.cshtml
@@ -1,151 +1,89 @@
-﻿
+﻿@model AutoPartsHub.Models.LoginModel
 @{
     Layout = null;
 }
 
 <!DOCTYPE html>
-<html class="no-js" lang="zxx">
+<html lang="en" class="h-100">
 
 
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="keywords" content="" />
+    <meta name="author" content="" />
+    <meta name="robots" content="" />
+    <meta name="description" content="Davur - Restaurant Bootstrap Admin Dashboard + FrontEnd" />
+    <meta property="og:title" content="Davur - Restaurant Bootstrap Admin Dashboard + FrontEnd" />
+    <meta property="og:description" content="Davur - Restaurant Bootstrap Admin Dashboard + FrontEnd" />
+    <meta property="og:image" content="https://davur.dexignzone.com/xhtml/page-error-404.html" />
+    <meta name="format-detection" content="telephone=no">
+    <title>Davur - Restaurant Bootstrap Admin Dashboard + FrontEnd </title>
+    <!-- Favicon icon -->
+    <link rel="icon" type="image/png" sizes="16x16" href="/adminassets/images/favicon.png">
+    <link href="/adminassets/css/style.css" rel="stylesheet">
 
-    <title>Login :: AutoPartsHub - Car Parts Store eCommerce HTML Template</title>
-
-    <!--== Favicon ==-->
-    <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon" />
-
-    <!--== Google Fonts ==-->
-    <link href="https://fonts.googleapis.com/css?family=Oswald:400,500,600,700%7CPoppins:400,400i,500,600&amp;display=swap" rel="stylesheet">
-
-    <!-- build:css assets/css/app.min.css -->
-    <!--== Leaflet Min CSS ==-->
-    <link href="/assets/css/leaflet.min.css" rel="stylesheet" />
-    <!--== Nice Select Min CSS ==-->
-    <link href="/assets/css/nice-select.min.css" rel="stylesheet" />
-    <!--== Slick Slider Min CSS ==-->
-    <link href="/assets/css/slick.min.css" rel="stylesheet" />
-    <!--== Magnific Popup Min CSS ==-->
-    <link href="/assets/css/magnific-popup.min.css" rel="stylesheet" />
-    <!--== Slicknav Min CSS ==-->
-    <link href="/assets/css/slicknav.min.css" rel="stylesheet" />
-    <!--== Animate Min CSS ==-->
-    <link href="/assets/css/animate.min.css" rel="stylesheet" />
-    <!--== Ionicons Min CSS ==-->
-    <link href="/assets/css/ionicons.min.css" rel="stylesheet" />
-    <!--== Font-Awesome Min CSS ==-->
-    <link href="/assets/css/font-awesome.min.css" rel="stylesheet" />
-    <!--== Bootstrap Min CSS ==-->
-    <link href="/assets/css/bootstrap.min.css" rel="stylesheet" />
-
-    <!--== Main Style CSS ==-->
-    <link href="/assets/css/style.css" rel="stylesheet" />
-    <!--== Helper Min CSS ==-->
-    <link href="/assets/css/helper.min.css" rel="stylesheet" />
-    <!-- endbuild -->
-    <!--[if lt IE 9]>
-    <script src="//oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-    <script src="//oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
 </head>
 
-<body>
-
-    <!--== Start Header Area ==-->
-
-    <!--== End Header Area ==-->
-
-    <!--== Start Page Content Wrapper ==-->
-    <div class="page-content-wrapper sp-y">
-        <div class="login-page-content-wrap">
-            <div class="container">
-              
-                <div class="row">
-                    <div class="col-lg-3 col-md-12"></div>
-                    <div class="col-lg-6 col-md-12">
-                       
-                        <div class="login-form-style">
-                            
-                                    <div class="site-logo text-center text-sm-start m-4 mb-5">
-                                        <a href="/Authentication/Login"><img src="/assets/img/AutoLogo.png" class="ml-auto mr-auto" alt="Logo" /></a>
+<body class="h-100">
+    <div class="authincation h-100">
+        <div class="container h-100">
+            <div class="row justify-content-center h-100 align-items-center">
+                <div class="col-md-6">
+                    <div class="authincation-content">
+                        <div class="row no-gutters">
+                            <div class="col-xl-12">
+                                <div class="auth-form">
+                                    <div class="text-center mb-3" style="width:15rem;height:11rem;display:flex;margin:auto">
+                                        <a href="index.html"><img src="/adminassets/images/tms1.png" style="width:11rem;height:9rem" alt=""></a>
                                     </div>
-                                
-                            <form action="#" method="post">
-                                <input type="text" name="user-name" placeholder="Username">
-                                <input type="password" name="user-password" placeholder="Password">
-                                <div class="login-toggle-btn">
-                                    <input id="login-check" type="checkbox">
-                                    <label for="login-check">Remember me</label>
-                                    <a href="#">Forgot Password?</a>
+                                    <h4 class="text-center mb-4">Sign in </h4>
+                                    <form asp-controller="Authentication" asp-action="Login" method="post">
+                                        <div class="form-group">
+                                            <label class="mb-1"><strong>Email</strong></label>
+                                            <input type="email" class="form-control" asp-for="Username">
+                                        </div>
+                                        <div class="form-group">
+                                            <label class="mb-1"><strong>Password</strong></label>
+                                            <input type="password" asp-for="Password" class="form-control">
+                                        </div>
+                                        <div class="form-row d-flex justify-content-between mt-4 mb-2">
+                                            <div class="form-group">
+                                                <div class="custom-control custom-checkbox ms-1">
+                                                    <input type="checkbox" class="custom-control-input" id="basic_checkbox_1">
+                                                    <label class="custom-control-label" for="basic_checkbox_1">Remember Me</label>
+                                                </div>
+                                            </div>
+                                            <div class="form-group">
+                                                <a href="/forgotpassword">Forgot Password?</a>
+                                            </div>
+
+                                        </div>
+                                        <div class="text-center">
+                                            <button type="submit" class="btn btn-primary btn-block">Sign Me In</button>
+                                        </div>
+
+                                    </form>
+
                                 </div>
-                                <div class="login-btn">
-                                    <button type="submit">Login</button>
-                                </div>
-                            </form>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <!--== End Page Content Wrapper ==-->
- 
-    <!-- Scroll Top Button -->
-    <button class="btn-scroll-top"><i class="ion-chevron-up"></i></button>
 
 
-    <!--== Start Responsive Menu Wrapper ==-->
-    <aside class="off-canvas-wrapper off-canvas-menu">
-        <div class="off-canvas-overlay"></div>
-        <div class="off-canvas-inner">
-            <!-- Start Off Canvas Content -->
-            <div class="off-canvas-content">
-                <div class="off-canvas-header">
-                    <div class="logo">
-                        <a href="index.html"><img src="/assets/img/AutoLogo.png" alt="Logo"></a>
-                    </div>
-                    <div class="close-btn">
-                        <button class="btn-close"><i class="ion-android-close"></i></button>
-                    </div>
-                </div>
-
-                <!-- Content Auto Generate Form Main Menu Here -->
-                <div class="res-mobile-menu mobile-menu">
-                </div>
-            </div>
-        </div>
-    </aside>
-    <!--== End Responsive Menu Wrapper ==-->
-    <!--=======================Javascript============================-->
-    <!-- build:js assets/js/app.min.js -->
-    <!--=== Modernizr Min Js ===-->
-    <script src="/assets/js/modernizr-3.6.0.min.js"></script>
-    <!--=== jQuery Min Js ===-->
-    <script src="/assets/js/jquery.min.js"></script>
-    <!--=== jQuery Migration Min Js ===-->
-    <script src="/assets/js/jquery-migrate.min.js"></script>
-    <!--=== Popper Min Js ===-->
-    <script src="assets/js/popper.min.js"></script>
-    <!--=== Bootstrap Min Js ===-->
-    <script src="/assets/js/bootstrap.min.js"></script>
-    <!--=== Slicknav Min Js ===-->
-    <script src="/assets/js/jquery.slicknav.min.js"></script>
-    <!--=== Magnific Popup Min Js ===-->
-    <script src="/assets/js/jquery.magnific-popup.min.js"></script>
-    <!--=== Slick Slider Min Js ===-->
-    <script src="/assets/js/slick.min.js"></script>
-    <!--=== Nice Select Min Js ===-->
-    <script src="/assets/js/jquery.nice-select.min.js"></script>
-    <!--=== Leaflet Min Js ===-->
-    <script src="/assets/js/leaflet.min.js"></script>
-    <!--=== Countdown Js ===-->
-    <script src="/assets/js/countdown.js"></script>
-
-    <!--=== Active Js ===-->
-    <script src="/assets/js/active.js"></script>
-    <!-- endbuild -->
+    <!--**********************************
+        Scripts
+    ***********************************-->
+    <!-- Required vendors -->
+    <script src="/adminassets/vendor/global/global.min.js"></script>
+    <script src="/adminassets/vendor/bootstrap-select/dist/js/bootstrap-select.min.js"></script>
+    <script src="/adminassets/js/custom.min.js"></script>
+    <script src="/adminassets/js/deznav-init.js"></script>
 
 </body>
 
