--- a/Views/ItemImages/Index.cshtml
+++ b/Views/ItemImages/Index.cshtml
@@ -34,7 +34,7 @@
                 @Html.DisplayNameFor(model => model.ItemImageName)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.ThumbailImage)
+                @Html.DisplayNameFor(model => model.ThumbnailImage)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.NormalImage)
@@ -61,7 +61,7 @@
                 @Html.DisplayFor(modelItem => item.ItemImageName)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.ThumbailImage)
+                @Html.DisplayFor(modelItem => item.ThumbnailImage)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.NormalImage)
@@ -74,7 +74,7 @@
                 @Html.DisplayFor(modelItem => item.BanerImage)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Item.ItemId)
+                @Html.DisplayFor(modelItem => item.Item.ItemName)
             </td>
 
                                     <td style="display: flex;margin-inline-start:0px !important">
