--- a/Views/Shared/_AdminLayout.cshtml
+++ b/Views/Shared/_AdminLayout.cshtml
@@ -15,6 +15,7 @@
 	<meta name="format-detection" content="telephone=no">
     <title>AutoPartsHub - Restaurant Bootstrap Admin Dashboard + FrontEnd </title>
     <!-- Favicon icon -->
+    <link href="~/css/site.css" rel="stylesheet" />
 	<link rel="icon" type="/adminassets/image/png" sizes="16x16" href="./adminassets/images/favicon.png">
 	<link href="/adminassets/vendor/jqvmap/css/jqvmap.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="/adminassets/vendor/chartist/css/chartist.min.css">
@@ -756,6 +757,13 @@
 						</a>
 
 					</li>
+					<li>
+						<a class=" ai-icon" asp-controller="Sizes" asp-action="Index" aria-expanded="false">
+							<i class="flaticon-381-notepad"></i>
+							<span class="nav-text">Sizes</span>
+						</a>
+
+					</li>
 
 
 					
@@ -780,7 +788,13 @@
 					<li>
 						<a class=" ai-icon" asp-controller="ItemImages" asp-action="Index" aria-expanded="false">
 							<i class="flaticon-381-notepad"></i>
-							<span class="nav-text">ItemImages</span>
+							<span class="nav-text">Item Images</span>
+						</a>
+					</li>
+					<li>
+						<a class=" ai-icon" asp-controller="ItemColors" asp-action="Index" aria-expanded="false">
+							<i class="flaticon-381-notepad"></i>
+							<span class="nav-text">Item Colors</span>
 						</a>
 
 					</li>
@@ -791,7 +805,14 @@
 					<li>
 						<a class=" ai-icon" asp-controller="ItemSizes" asp-action="Index" aria-expanded="false">
 							<i class="flaticon-381-notepad"></i>
-							<span class="nav-text">ItemSizes</span>
+							<span class="nav-text">Item Sizes</span>
+						</a>
+
+					</li>
+					<li>
+						<a class=" ai-icon" asp-controller="ItemCategories" asp-action="Index" aria-expanded="false">
+							<i class="flaticon-381-notepad"></i>
+							<span class="nav-text">Item Category</span>
 						</a>
 
 					</li>
@@ -800,7 +821,7 @@
 					<li>
 						<a class=" ai-icon" asp-controller="ItemTags" asp-action="Index" aria-expanded="false">
 							<i class="flaticon-381-notepad"></i>
-							<span class="nav-text">ItemTags</span>
+							<span class="nav-text">Item Tags</span>
 						</a>
 
 					</li>
@@ -843,7 +864,7 @@
 					<li>
 						<a class=" ai-icon" asp-controller="VoucherCodes" asp-action="Index" aria-expanded="false">
 							<i class="flaticon-381-notepad"></i>
-							<span class="nav-text">VoucherCodes</span>
+							<span class="nav-text">Voucher Codes</span>
 						</a>
 
 					</li>
