--- a/Views/Categories/Create.cshtml
+++ b/Views/Categories/Create.cshtml
@@ -23,7 +23,7 @@
 
             <div class="card-body">
                 <div class="form-validation">
-        <form asp-action="Create">
+        <form asp-action="Create" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group row">
                 <div class="col-md-6">
@@ -42,9 +42,9 @@
                     <span asp-validation-for="CategoryDescription" class="text-danger"></span>
                 </div>
                 <div class="col-md-6 mt-4">
-                                <label asp-for="CategoryImage" class="control-label">Category Image</label>
-                    <input asp-for="CategoryImage" class="form-control" />
-                    <span asp-validation-for="CategoryImage" class="text-danger"></span>
+                                <label asp-for="CategoryImageFile" class="control-label">Category Image</label>
+                                <input asp-for="CategoryImageFile" type="file" class="form-control" />
+                                <span asp-validation-for="CategoryImageFile" class="text-danger"></span>
                 </div>
             </div>
                        
