--- a/Views/Categories/Edit.cshtml
+++ b/Views/Categories/Edit.cshtml
@@ -26,7 +26,7 @@
 
 
 
-        <form asp-action="Edit">
+        <form asp-action="Edit" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="CategoryId" />
             <div class="form-group row">
@@ -46,9 +46,9 @@
                     <span asp-validation-for="CategoryDescription" class="text-danger"></span>
                 </div>
                 <div class="col-md-6 mt-4">
-                                <label asp-for="CategoryImage" class="control-label">Category Image</label>
-                    <input asp-for="CategoryImage" class="form-control" />
-                    <span asp-validation-for="CategoryImage" class="text-danger"></span>
+                                <label asp-for="CategoryImageFile" class="control-label">Category Image</label>
+                                <input asp-for="CategoryImageFile" type="file" class="form-control" />
+                                <span asp-validation-for="CategoryImageFile" class="text-danger"></span>
                 </div>
                 <div class="form-group row">
                 <div class="col-md-12 mt-4">
