--- a/Views/Categories/Index.cshtml
+++ b/Views/Categories/Index.cshtml
@@ -58,7 +58,8 @@
                 @Html.DisplayFor(modelItem => item.CategoryDescription)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.CategoryImage)
+
+                                        <img src="@Html.DisplayFor(modelItem => item.CategoryImage)" class="w-75 img-responsive" />
             </td>
          
 
