--- a/Views/ItemCategories/Create.cshtml
+++ b/Views/ItemCategories/Create.cshtml
@@ -28,10 +28,19 @@
                     <form asp-action="Create">
                         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                         <div class="form-group row">
-                            <div class="col-md-6">
-                                <label asp-for="CategoryId" class="control-label">Category Id</label>
-                                <input asp-for="CategoryId" class="form-control" />
-                                <span asp-validation-for="CategoryId" class="text-danger"></span>
+                            <div class="col-md-6 mt-4">
+                                <label asp-for="CategoryId" class="control-label">Category</label>
+                                <select asp-for="CategoryId" class="form-control" asp-items="ViewBag.CategoryId">
+                                    <option>----- Select Category -----</option>
+
+                                </select>
+                            </div>
+                            <div class="col-md-6 mt-4">
+                                <label asp-for="ItemId" class="control-label">Item</label>
+                                <select asp-for="ItemId" class="form-control" asp-items="ViewBag.ItemId">
+                                    <option>----- Select Item -----</option>
+
+                                </select>
                             </div>
                             <div class="col-md-6">
                             </div>
