--- a/Views/ItemSizes/Create.cshtml
+++ b/Views/ItemSizes/Create.cshtml
@@ -16,7 +16,7 @@
 
         <div class="card">
             <div class="card-header">
-                <h4 class="card-title">Add Item Size</h4>
+                <h4 class="card-title">Add Item</h4>
 
 
             </div>
@@ -25,46 +25,47 @@
                 <div class="form-validation">
 
 
+                    <form asp-action="Create">
+                        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                        <div class="form-group row">
+                            <div class="col-md-6 mt-4">
+                                <label asp-for="ItemId" class="control-label">Item</label>
+                                <select asp-for="ItemId" class="form-control" asp-items="ViewBag.ItemId">
+                                    <option>----- Select Item -----</option>
+
+                                </select>
+                            </div>
+                            <div class="col-md-6 mt-4">
+                                <label asp-for="SizeId" class="control-label">Size</label>
+                                <select asp-for="SizeId" class="form-control" asp-items="ViewBag.SizeId"></select>
+                            </div>
+                            <div class="col-md-6">
+                                <label asp-for="SizePrice" class="control-label">Size Price</label>
+                                <input asp-for="SizePrice" class="form-control" />
+                                <span asp-validation-for="SizePrice" class="text-danger"></span>
+                            </div>
+                            <div class="col-md-6 mt-4 form-check form-switch d-flex flex-column">
+                                <label asp-for="IsDefault" class="control-label">Is Default</label>
+                                <input asp-for="IsDefault" type="checkbox" role="switch" class="form-check-input" style="margin-left=1rem" />
+                                <span asp-validation-for="IsDefault" class="text-danger"></span>
+                            </div>
+
+
+                            <div class="col-md-12 mt-4 ">
+
+
+                                <input type="submit" value="Create" class="btn btn-success btnf-r " />
+                                <a asp-action="Index" class="btn btn-warning btnf-r" style="margin-right:4px !important">Back to List</a>
 
 
 
+                            </div>
+                        </div>
 
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group row">
-                <div class="col-md-6">
-                                <label asp-for="ItemId" class="control-label">Item Id</label>
-                    <select asp-for="ItemId" class="form-control" asp-items="ViewBag.ItemId"></select>
-                </div>
-                <div class="col-md-6">
-                                <label asp-for="SizeName" class="control-label">Size Name</label>
-                    <input asp-for="SizeName" class="form-control" />
-                    <span asp-validation-for="SizeName" class="text-danger"></span>
-                </div>
-                <div class="col-md-6 mt-4">
-                                <label asp-for="SizeExtraAmount" class="control-label">Size Extra Amount</label>
-                    <input asp-for="SizeExtraAmount" class="form-control" />
-                    <span asp-validation-for="SizeExtraAmount" class="text-danger"></span>
-                </div>
-                <div class="col-md-6 mt-4">
-                                <label asp-for="IsDefaultSize" class="control-label">Is Default Size</label>
-                    <input asp-for="IsDefaultSize" class="form-control" />
-                    <span asp-validation-for="IsDefaultSize" class="text-danger"></span>
-                </div>
-
-                <div class="col-md-12 mt-4">
-                    
-                        <input type="submit" value="Create" class="btn btn-success btnf-r " />
-                    
-                        
-                        <a asp-action="Index" class="btn btn-warning btnf-r" style="margin-right:4px !important">Back to List</a>
+                    </form>
                 </div>
             </div>
-        </form>
+        </div>
     </div>
 </div>
-</div>
-</div>
-</div>
-
 
