--- a/Views/ItemSizes/Delete.cshtml
+++ b/Views/ItemSizes/Delete.cshtml
@@ -9,67 +9,40 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>TblItemSize</h4>
+    <h4>TblItem</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.SizeName)
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.ItemId)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.SizeName)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.ItemId)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.SizeExtraAmount)
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.SizeId)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.SizeExtraAmount)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.SizeId)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IsDefaultSize)
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.SizePrice)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IsDefaultSize)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.SizePrice)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CreatedAt)
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.IsDefault)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CreatedAt)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.IsDefault)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CreatedBy)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CreatedBy)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.UpdatedAt)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.UpdatedAt)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.UpdatedBy)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.UpdatedBy)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.MDelete)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.MDelete)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Item)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Item.ItemId)
-        </dd>
+
+
+
     </dl>
-    
+
     <form asp-action="Delete">
-        <input type="hidden" asp-for="SizeId" />
+        <input type="hidden" asp-for="ItemId" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
     </form>
