--- a/Views/ItemTags/Create.cshtml
+++ b/Views/ItemTags/Create.cshtml
@@ -30,11 +30,16 @@
                         <div class="form-group row">
                             <div class="col-md-6">
                                 <label asp-for="TagId" class="control-label">Tag Id</label>
-                                <select asp-for="TagId" class="form-control" asp-items="ViewBag.TagId"></select>
+                                <select asp-for="TagId" class="form-control" asp-items="ViewBag.TagId">
+                                    <option>----- Select Tag -----</option>
+                                </select>
                             </div>
                             <div class="col-md-6">
                                 <label asp-for="ItemId" class="control-label">Item Id</label>
-                                <select asp-for="ItemId" class="form-control" asp-items="ViewBag.ItemId"></select>
+                                <select asp-for="ItemId" class="form-control" asp-items="ViewBag.ItemId">
+                                    <option>----- Select Item -----</option>
+
+                                </select>
                             </div>
                             <div class="form-group row">
                                 <div class="col-md-12 mt-4">
