--- a/Views/Items/Create.cshtml
+++ b/Views/Items/Create.cshtml
@@ -25,7 +25,7 @@
                 <div class="form-validation">
 
 
-        <form asp-action="Create">
+        <form asp-action="Create" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group row">
                 <div class="col-md-6">
@@ -34,7 +34,7 @@
                     <span asp-validation-for="ItemSlugs" class="text-danger"></span>
                 </div>
                 <div class="col-md-6">
-                                <label asp-for="ItemName" class="control-label">Item Name</label>
+                    <label asp-for="ItemName" class="control-label">Item Name</label>
                     <input asp-for="ItemName" class="form-control" />
                     <span asp-validation-for="ItemName" class="text-danger"></span>
                 </div>
@@ -48,14 +48,13 @@
                     <input asp-for="Discount" class="form-control" />
                     <span asp-validation-for="Discount" class="text-danger"></span>
                 </div>
-                            <div class="col-md-6 mt-4">
-                                <label asp-for="IsFeature" class="control-label">Is Feature</label>
-                    <input asp-for="IsFeature" class="form-control" />
-                    <span asp-validation-for="IsFeature" class="text-danger"></span>
-                </div>
+                           
                             <div class="col-md-6 mt-4">
                                 <label asp-for="BrandId" class="control-label">Brand Id</label>
-                    <select asp-for="BrandId" class="form-control" asp-items="ViewBag.BrandId"></select>
+                    <select asp-for="BrandId" class="form-control" asp-items="ViewBag.BrandId">
+                                    <option>----- Select Brand -----</option>
+
+                    </select>
                 </div>
                             <div class="col-md-6 mt-4">
                     <label asp-for="Sku" class="control-label"></label>
@@ -63,9 +62,9 @@
                     <span asp-validation-for="Sku" class="text-danger"></span>
                 </div>
                             <div class="col-md-6 mt-4">
-                                <label asp-for="DefaultImageUrl" class="control-label">Default Image Url</label>
-                    <input asp-for="DefaultImageUrl" class="form-control" />
-                    <span asp-validation-for="DefaultImageUrl" class="text-danger"></span>
+                                <label asp-for="DefaultImageFile" class="control-label">Default Image Url</label>
+                    <input asp-for="DefaultImageFile" type="file" class="form-control" />
+                                <span asp-validation-for="DefaultImageFile" class="text-danger"></span>
                 </div>
                             <div class="col-md-6 mt-4">
                                 <label asp-for="ShortDescription" class="control-label">Short Description</label>
@@ -76,9 +75,13 @@
                                 <label asp-for="LongDescription" class="control-label">Long Description</label>
                     <input asp-for="LongDescription" class="form-control" />
                     <span asp-validation-for="LongDescription" class="text-danger"></span>
-               
-            
-            
+               </div>
+
+                            <div class="col-md-6 mt-4 form-check form-switch d-flex flex-column">
+                                <label asp-for="IsFeature" class="control-label">Is Feature</label>
+                                <input asp-for="IsFeature" type="checkbox" role="switch" class="form-check-input" style="margin-left=1rem" />
+                                <span asp-validation-for="IsFeature" class="text-danger"></span>
+                            </div>
 
                 <div class="col-md-12 mt-4 ">
 
@@ -89,7 +92,7 @@
 
 
             </div>
-            </div>
+            
             </div>
         </form>
     </div>
