--- a/Views/ShippingPolicies/Edit.cshtml
+++ b/Views/ShippingPolicies/Edit.cshtml
@@ -35,11 +35,11 @@
                             <input asp-for="PolicyAmount" class="form-control" />
                             <span asp-validation-for="PolicyAmount" class="text-danger"></span>
                         </div>
-                        <div class="col-md-6">
+                            <div class="col-md-6 mt-4 form-check form-switch d-flex flex-column">
                                 <label asp-for="IsLifeTime" class="control-label">Is Life Time</label>
-                            <input asp-for="IsLifeTime" class="form-control" />
-                            <span asp-validation-for="IsLifeTime" class="text-danger"></span>
-                        </div>
+                                <input asp-for="IsLifeTime" type="checkbox" role="switch" class="form-check-input" style="margin-left=1rem" />
+                                <span asp-validation-for="IsLifeTime" class="text-danger"></span>
+                            </div>
                         <div class="col-md-6 mt-4">
                                 <label asp-for="PolicyStatsDate" class="control-label">Policy Stats Date</label>
                             <input asp-for="PolicyStatsDate" class="form-control" />
