21/07/24(Show the data on front side in shop page ,and home and create detail product page and then , remove all dummy data from database)

--- a/Views/Home/Shop.cshtml
+++ b/Views/Home/Shop.cshtml
@@ -162,7 +162,7 @@
                         <div class="product-item">
                         <!-- Product Thumbnail -->
                         <div class="product-item__thumb">
-                        <a href="single-product.html?id=@item.ItemId">
+                        <a href="itemDetail?id=@item.ItemId">
                         <img class="thumb-primary" src="@item.TblItemImages.FirstOrDefault(x=>x.IsDefault).NormalImage" alt="Product" />
                         </a>
                         <!-- Product Rating -->
