--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -141,11 +141,15 @@
             <div class="col-12">
                 <div class="product-wrapper">
                     <div class="product-carousel">
+
+                        @foreach(var item in Model.Where(x=>x.IsFeature))
+                        {
+                            
                         <!-- Start Product Item -->
                         <div class="product-item">
                             <div class="product-item__thumb">
                                 <a href="single-product.html">
-                                    <img class="thumb-primary" src="../../assets/img/product/product-1.png" alt="Product" />
+                                    <img class="thumb-primary" src="@item.TblItemImages.FirstOrDefault(x=>x.IsDefault).NormalImage" alt="Product" />
                                     <img class="thumb-secondary" src="../../assets/img/product/product-2.png" alt="Product" />
                                 </a>
                             </div>
@@ -158,8 +162,8 @@
                                     <span><i class="ion-android-star"></i></span>
                                     <span><i class="ion-android-star-half"></i></span>
                                 </div>
-                                <h4 class="title"><a href="single-product.html">Auto Clutch & Brake</a></h4>
-                                <span class="price"><strong>Price:</strong> $165.00</span>
+                                <h4 class="title"><a href="single-product.html">@item.ItemName</a></h4>
+                                <span class="price"><strong>Price:</strong> @item.ItemPrice</span>
                             </div>
 
                             <div class="product-item__action">
@@ -170,134 +174,12 @@
                             </div>
 
                             <div class="product-item__sale">
-                                <span class="sale-txt">25%</span>
+                                <span class="sale-txt">@item.Discount %</span>
                             </div>
                         </div>
                         <!-- End Product Item -->
-                        <!-- Start Product Item -->
-                        <div class="product-item">
-                            <div class="product-item__thumb">
-                                <a href="single-product.html">
-                                    <img class="thumb-primary" src="../../assets/img/product/product-3.png" alt="Product" />
-                                    <img class="thumb-secondary" src="../../assets/img/product/product-4.png" alt="Product" />
-                                </a>
-                            </div>
-
-                            <div class="product-item__content">
-                                <div class="ratting">
-                                    <span><i class="ion-android-star"></i></span>
-                                    <span><i class="ion-android-star"></i></span>
-                                    <span><i class="ion-android-star"></i></span>
-                                    <span><i class="ion-android-star-half"></i></span>
-                                    <span><i class="ion-android-star-half"></i></span>
-                                </div>
-                                <h4 class="title"><a href="single-product.html">Leather Steering Wheel</a></h4>
-                                <span class="price"><strong>Price:</strong> $615.00</span>
-                            </div>
-
-                            <div class="product-item__action">
-                                <button class="btn-add-to-cart"><i class="ion-bag"></i></button>
-                                <button class="btn-add-to-cart"><i class="ion-ios-loop-strong"></i></button>
-                                <button class="btn-add-to-cart"><i class="ion-ios-heart-outline"></i></button>
-                                <button class="btn-add-to-cart"><i class="ion-eye"></i></button>
-                            </div>
-                        </div>
-                        <!-- End Product Item -->
-                        <!-- Start Product Item -->
-                        <div class="product-item">
-                            <div class="product-item__thumb">
-                                <a href="single-product.html">
-                                    <img class="thumb-primary" src="../../assets/img/product/product-4.png" alt="Product" />
-                                    <img class="thumb-secondary" src="../../assets/img/product/product-5.png" alt="Product" />
-                                </a>
-                            </div>
-
-                            <div class="product-item__content">
-                                <div class="ratting">
-                                    <span><i class="ion-android-star"></i></span>
-                                    <span><i class="ion-android-star"></i></span>
-                                    <span><i class="ion-android-star"></i></span>
-                                    <span><i class="ion-android-star"></i></span>
-                                    <span><i class="ion-android-star"></i></span>
-                                </div>
-                                <h4 class="title"><a href="single-product.html">Hanging 4K Camera</a></h4>
-                                <span class="price"><strong>Price:</strong> $65.00</span>
-                            </div>
-
-                            <div class="product-item__action">
-                                <button class="btn-add-to-cart"><i class="ion-bag"></i></button>
-                                <button class="btn-add-to-cart"><i class="ion-ios-loop-strong"></i></button>
-                                <button class="btn-add-to-cart"><i class="ion-ios-heart-outline"></i></button>
-                                <button class="btn-add-to-cart"><i class="ion-eye"></i></button>
-                            </div>
-
-                            <div class="product-item__sale">
-                                <span class="sale-txt">35%</span>
-                            </div>
-                        </div>
-                        <!-- End Product Item -->
-                        <!-- Start Product Item -->
-                        <div class="product-item">
-                            <div class="product-item__thumb">
-                                <a href="single-product.html">
-                                    <img class="thumb-primary" src="../../assets/img/product/product-2.png" alt="Product" />
-                                    <img class="thumb-secondary" src="../../assets/img/product/product-1.png" alt="Product" />
-                                </a>
-                            </div>
-
-                            <div class="product-item__content">
-                                <div class="ratting">
-                                    <span><i class="ion-android-star"></i></span>
-                                    <span><i class="ion-android-star"></i></span>
-                                    <span><i class="ion-android-star"></i></span>
-                                    <span><i class="ion-android-star"></i></span>
-                                    <span><i class="ion-android-star-half"></i></span>
-                                </div>
-                                <h4 class="title"><a href="single-product.html">17 inch Rims 8 Lug</a></h4>
-                                <span class="price"><strong>Price:</strong> $165.00</span>
-                            </div>
-
-                            <div class="product-item__action">
-                                <button class="btn-add-to-cart"><i class="ion-bag"></i></button>
-                                <button class="btn-add-to-cart"><i class="ion-ios-loop-strong"></i></button>
-                                <button class="btn-add-to-cart"><i class="ion-ios-heart-outline"></i></button>
-                                <button class="btn-add-to-cart"><i class="ion-eye"></i></button>
-                            </div>
-                        </div>
-                        <!-- End Product Item -->
-                        <!-- Start Product Item -->
-                        <div class="product-item">
-                            <div class="product-item__thumb">
-                                <a href="single-product.html">
-                                    <img class="thumb-primary" src="../../assets/img/product/product-5.png" alt="Product" />
-                                    <img class="thumb-secondary" src="../../assets/img/product/product-4.png" alt="Product" />
-                                </a>
-                            </div>
-
-                            <div class="product-item__content">
-                                <div class="ratting">
-                                    <span><i class="ion-android-star"></i></span>
-                                    <span><i class="ion-android-star"></i></span>
-                                    <span><i class="ion-android-star"></i></span>
-                                    <span><i class="ion-android-star"></i></span>
-                                    <span><i class="ion-android-star-half"></i></span>
-                                </div>
-                                <h4 class="title"><a href="single-product.html">Locking Hub Diagram</a></h4>
-                                <span class="price"><strong>Price:</strong> $165.00</span>
-                            </div>
-
-                            <div class="product-item__action">
-                                <button class="btn-add-to-cart"><i class="ion-bag"></i></button>
-                                <button class="btn-add-to-cart"><i class="ion-ios-loop-strong"></i></button>
-                                <button class="btn-add-to-cart"><i class="ion-ios-heart-outline"></i></button>
-                                <button class="btn-add-to-cart"><i class="ion-eye"></i></button>
-                            </div>
-
-                            <div class="product-item__sale">
-                                <span class="sale-txt">21%</span>
-                            </div>
-                        </div>
-                        <!-- End Product Item -->
+                        }
+                       
                     </div>
                 </div>
             </div>
@@ -409,8 +291,8 @@
                         }
                         </div>
                     </div>
-                    <!-- End Product Item -->
-                    }
+                
+                
 
                    
                  
