--- a/Views/Home/ItemDetail.cshtml
+++ b/Views/Home/ItemDetail.cshtml
@@ -15,9 +15,9 @@
                             <h1>Product Details</h1>
 
                             <ul class="breadcrumb">
-                                <li><a href="index.html">Home</a></li>
-                                <li><a href="shop.html">Shop</a></li>
-                                <li class="current"><a href="#">Product Details</a></li>
+                                <li><a href="/">Home</a></li>
+                                <li><a href="shop">Shop</a></li>
+                                <li class="current"><a href="itemDetail">Product Details</a></li>
                             </ul>
                         </div>
                     </div>
@@ -34,52 +34,32 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="row">
-                            <!-- Start Product Thumbnail Area -->
-                            <div class="col-md-5">
-                                <div class="product-thumb-area">
-                                    <div class="product-details-thumbnail">
-                                        <div class="product-thumbnail-slider" id="thumb-gallery">
-                                            <figure class="pro-thumb-item" data-mfp-src="@Model.TblItemImages.FirstOrDefault(x=>x.IsDefault).BanerImage">
-                                                <img src="@Model.TblItemImages.FirstOrDefault(x=>x.IsDefault).NormalImage" />
-                                            </figure>
-                                            <figure class="pro-thumb-item" data-mfp-src="@Model.TblItemImages.FirstOrDefault(x=>x.IsDefault).BanerImage">
-                                                <img src="@Model.TblItemImages.FirstOrDefault(x=>x.IsDefault).NormalImage" />
-                                            </figure>
-                                            <figure class="pro-thumb-item" data-mfp-src="@Model.TblItemImages.FirstOrDefault(x=>x.IsDefault).BanerImage">
-                                                <img src="@Model.TblItemImages.FirstOrDefault(x=>x.IsDefault).NormalImage" />
-                                            </figure>
-                                            <figure class="pro-thumb-item" data-mfp-src="@Model.TblItemImages.FirstOrDefault(x=>x.IsDefault).BanerImage">
-                                                <img src="@Model.TblItemImages.FirstOrDefault(x=>x.IsDefault).NormalImage" />
-                                            </figure>
-                                            <figure class="pro-thumb-item" data-mfp-src="@Model.TblItemImages.FirstOrDefault(x=>x.IsDefault).BanerImage">
-                                                <img src="@Model.TblItemImages.FirstOrDefault(x=>x.IsDefault).NormalImage" />
-                                            </figure>
-                                        </div>
-
-                                        <a href="#thumb-gallery" class="btn-large-view btn-gallery-popup">View Larger <i
-                                            class="fa fa-search-plus"></i></a>
-                                    </div>
-
-                                    <div class="product-details-thumbnail-nav">
-                                        <figure class="pro-thumb-item">
-                                            <img src="@Model.TblItemImages.FirstOrDefault(x=>x.IsDefault).NormalImage" />
-                                        </figure>
-                                        <figure class="pro-thumb-item">
-                                            <img src="@Model.TblItemImages.FirstOrDefault(x=>x.IsDefault).ThumbnailImage" />
-                                        </figure>
-                                        <figure class="pro-thumb-item">
-                                            <img src="@Model.TblItemImages.FirstOrDefault(x=>x.IsDefault).BanerImage" />
-                                        </figure>
-                                        <figure class="pro-thumb-item">
-                                            <img src="@Model.TblItemImages.FirstOrDefault(x=>x.IsDefault).NormalImage" />
-                                        </figure>
-                                        <figure class="pro-thumb-item">
-                                            <img src="@Model.TblItemImages.FirstOrDefault(x=>x.IsDefault).NormalImage" />
+                         
+                     
+                        <div class="col-md-5">
+                            <div class="product-thumb-area">
+                                <div class="product-details-thumbnail">
+                                    <div class="product-thumbnail-slider" id="thumb-gallery">
+                                        <figure class="pro-thumb-item" data-mfp-src="@Model.TblItemImages.First().BanerImage">
+                                            <img id="mainImage" src="@Model.TblItemImages.First().NormalImage" />
                                         </figure>
                                     </div>
+
+                                    <a href="#thumb-gallery" class="btn-large-view btn-gallery-popup">View Larger <i class="fa fa-search-plus"></i></a>
+                                </div>
+
+                                <div class="product-details-thumbnail-nav">
+                                    @foreach (var item in Model.TblItemImages)
+                                    {
+                                        <figure class="pro-thumb-item">
+                                            <img class="thumbnail-image" data-normal-image="@item.NormalImage" data-banner-image="@item.BanerImage" src="@item.ThumbnailImage" />
+                                        </figure>
+                                    }
                                 </div>
                             </div>
-                            <!-- End Product Thumbnail Area -->
+                        </div>
+                        <!-- End Product Thumbnail Area -->
+                   
 
                             <!-- Start Product Info Area -->
                             <div class="col-md-7">
@@ -123,12 +103,12 @@
                                                     <label for="quantity" class="sr-only">Quantity</label>
                                                     <input type="text" id="quantity" title="Quantity" value="1" />
                                                 </div>
-                                                <button class="btn btn-bordered">Add to Cart</button>
+                                                <button class="btn btn-bordered addToCart">Add to Cart</button>
                                             </div>
                                         </div>
 
                                         <div class="product-meta">
-                                            <span class="sku_wrapper">SKU: <span class="sku">N/A</span></span>
+                                            <span class="sku_wrapper">SKU: <span class="sku">@Model.Sku</span></span>
 
                                             <span class="posted_in">Categories:
                                             <a href="#">Best Seller,</a>
@@ -297,4 +277,89 @@
     </div>
     <!--== End Page Content Wrapper ==-->
 
+@section Scripts{
+    <script>
 
+        // $(document).ready(function () {
+        //     // Handle thumbnail clicks
+        //     $('.thumbnail-image').on('click', function () {
+        //         var normalImage = $(this).data('normal-image');
+        //         var bannerImage = $(this).data('banner-image');
+
+        //         // Update the main image
+        //         $('#mainImage').attr('src', normalImage);
+
+        //         // Update the magnific popup link
+        //         $('#thumb-gallery .pro-thumb-item').attr('data-mfp-src', bannerImage);
+        //     });
+
+        //     // Initialize Magnific Popup for the main image
+        //     $('.product-thumbnail-slider').magnificPopup({
+        //         delegate: 'figure', // child items selector, by clicking on it popup will open
+        //         type: 'image',
+        //         gallery: {
+        //             enabled: true
+        //         }
+        //     });
+
+        //     // Handle the "View Larger" button click
+        //     $('.btn-gallery-popup').on('click', function (e) {
+        //         e.preventDefault();
+        //         $('#thumb-gallery').magnificPopup('open');
+        //     });
+        // });
+
+
+        $(document).ready(function () {
+            // Handle thumbnail clicks
+            $('.thumbnail-image').on('click', function () {
+                var normalImage = $(this).data('normal-image');
+                var bannerImage = $(this).data('banner-image');
+
+                // Update the main image
+                $('#mainImage').attr('src', normalImage);
+
+                // Update the magnific popup link
+                $('#thumb-gallery .pro-thumb-item').attr('data-mfp-src', bannerImage);
+            });
+
+            // Initialize Magnific Popup for the main image
+            $('.product-thumbnail-slider').magnificPopup({
+                delegate: 'figure', // child items selector, by clicking on it popup will open
+                type: 'image',
+                gallery: {
+                    enabled: true
+                }
+            });
+
+            // Handle the "View Larger" button click
+            $('.btn-gallery-popup').on('click', function (e) {
+                e.preventDefault();
+                $('#thumb-gallery').magnificPopup('open');
+            });
+
+            // Handle Add to Cart button click
+            $('.addToCart').on('click', function (e) {
+                e.preventDefault();
+                var itemId = @Model.ItemId; // Get the item ID from the model
+                var quantity = $('#quantity').val(); // Get the quantity from the input
+                $.ajax({
+                    type: 'POST',
+                    url: '/addToCart',
+                    data: { itemId: itemId, quantity: quantity },
+                    success: function (response) {
+                        if (response.success) {
+                            alert(response.message); // Show success message
+                        } else {
+                            alert('Failed to add item to cart');
+                        }
+                    },
+                    error: function () {
+                        alert('Error occurred while adding item to cart');
+                    }
+                });
+            });
+        });
+
+    </script>
+}
